converted data to pandas

--- a/code/welt_project.ipynb
+++ b/code/welt_project.ipynb
@@ -2,17 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 14,
    "id": "d3586272",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import polars as pl"
+    "import polars as pl\n",
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 15,
    "id": "6a4ead67",
    "metadata": {},
    "outputs": [],
@@ -31,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 16,
    "id": "ae1e8c0f",
    "metadata": {},
    "outputs": [
@@ -68,7 +69,7 @@
        "└─────────┴───────────┴────────────┴──────────────────┘"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,6 +77,44 @@
    "source": [
     "electricity_df = electricity_df.filter(electricity_df[\"ISO3 Code\"] == \"AUT\")\n",
     "electricity_df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "998ccd91",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><style>\n",
+       ".dataframe > thead > tr,\n",
+       ".dataframe > tbody > tr {\n",
+       "  text-align: right;\n",
+       "  white-space: pre-wrap;\n",
+       "}\n",
+       "</style>\n",
+       "<small>shape: (1, 4)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>Country</th><th>ISO3 Code</th><th>Date</th><th>Price (EUR/MWhe)</th></tr><tr><td>u32</td><td>u32</td><td>u32</td><td>u32</td></tr></thead><tbody><tr><td>0</td><td>0</td><td>0</td><td>0</td></tr></tbody></table></div>"
+      ],
+      "text/plain": [
+       "shape: (1, 4)\n",
+       "┌─────────┬───────────┬──────┬──────────────────┐\n",
+       "│ Country ┆ ISO3 Code ┆ Date ┆ Price (EUR/MWhe) │\n",
+       "│ ---     ┆ ---       ┆ ---  ┆ ---              │\n",
+       "│ u32     ┆ u32       ┆ u32  ┆ u32              │\n",
+       "╞═════════╪═══════════╪══════╪══════════════════╡\n",
+       "│ 0       ┆ 0         ┆ 0    ┆ 0                │\n",
+       "└─────────┴───────────┴──────┴──────────────────┘"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "electricity_df.null_count() # Data contains no null values"
    ]
   },
   {
@@ -88,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 18,
    "id": "f0771c89",
    "metadata": {},
    "outputs": [
@@ -125,7 +164,7 @@
        "└────────────┴────────┘"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 19,
    "id": "23ba2024",
    "metadata": {},
    "outputs": [
@@ -185,7 +224,7 @@
        "└─────────┴───────────┴────────────┴──────────────────┴─────────────┘"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 20,
    "id": "d8f379fa",
    "metadata": {},
    "outputs": [],
@@ -207,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 21,
    "id": "36cbc84b",
    "metadata": {},
    "outputs": [
@@ -244,7 +283,7 @@
        "└────────────┴────────────┘"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,19 +306,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "2fc59cfc",
+   "execution_count": 22,
+   "id": "a052106a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "TRAIN_FILTER = pl.col(\"ds\") < pl.datetime(2023, 1, 1)\n",
-    "VALIDATION_FILTER = pl.col(\"ds\") >= pl.datetime(2023, 1, 1)\n",
-    "TEST_FILTER = pl.col(\"ds\") >= pl.datetime(2024, 1, 1)"
+    "daily_df = daily_df.to_pandas()\n",
+    "monthly_df = monthly_df.to_pandas()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
+   "id": "2fc59cfc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "TRAIN_FILTER = daily_df[\"ds\"] < pd.to_datetime(\"2024-01-01\")\n",
+    "VALIDATION_FILTER = (daily_df[\"ds\"] >= pd.to_datetime(\"2024-01-01\")) & (daily_df[\"ds\"] < pd.to_datetime(\"2025-01-01\"))\n",
+    "TEST_FILTER = daily_df[\"ds\"] >= pd.to_datetime(\"2025-01-01\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "id": "ab657096",
    "metadata": {},
    "outputs": [],
@@ -291,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "b4b54431",
    "metadata": {},
    "outputs": [],
@@ -305,6 +355,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "78c01f38",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8705e54b",
    "metadata": {},
    "outputs": [],
    "source": []
