--- a/code/welt_project.ipynb
+++ b/code/welt_project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 50,
    "id": "d3586272",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 51,
    "id": "6a4ead67",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 52,
    "id": "ae1e8c0f",
    "metadata": {},
    "outputs": [
@@ -69,7 +69,7 @@
        "└─────────┴───────────┴────────────┴──────────────────┘"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 53,
    "id": "998ccd91",
    "metadata": {},
    "outputs": [
@@ -108,7 +108,7 @@
        "└─────────┴───────────┴──────┴──────────────────┘"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 54,
    "id": "f0771c89",
    "metadata": {},
    "outputs": [
@@ -164,7 +164,7 @@
        "└────────────┴────────┘"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 55,
    "id": "23ba2024",
    "metadata": {},
    "outputs": [
@@ -224,7 +224,7 @@
        "└─────────┴───────────┴────────────┴──────────────────┴─────────────┘"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 56,
    "id": "d8f379fa",
    "metadata": {},
    "outputs": [],
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 57,
    "id": "36cbc84b",
    "metadata": {},
    "outputs": [
@@ -283,7 +283,7 @@
        "└────────────┴────────────┘"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 58,
    "id": "a052106a",
    "metadata": {},
    "outputs": [],
@@ -317,38 +317,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "2fc59cfc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "TRAIN_FILTER = daily_df[\"ds\"] < pd.to_datetime(\"2024-01-01\")\n",
-    "VALIDATION_FILTER = (daily_df[\"ds\"] >= pd.to_datetime(\"2024-01-01\")) & (daily_df[\"ds\"] < pd.to_datetime(\"2025-01-01\"))\n",
-    "TEST_FILTER = daily_df[\"ds\"] >= pd.to_datetime(\"2025-01-01\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 59,
    "id": "ab657096",
    "metadata": {},
    "outputs": [],
    "source": [
-    "daily_train = daily_df.filter(TRAIN_FILTER)\n",
-    "daily_test = daily_df.filter(VALIDATION_FILTER)\n",
-    "monthly_train = monthly_df.filter(TRAIN_FILTER)"
+    "daily_train = daily_df[daily_df[\"ds\"] < pd.to_datetime(\"2024-01-01\")]\n",
+    "daily_val = daily_df[(daily_df[\"ds\"] >= pd.to_datetime(\"2024-01-01\")) & (daily_df[\"ds\"] < pd.to_datetime(\"2025-01-01\"))]\n",
+    "daily_test = daily_df[daily_df[\"ds\"] >= pd.to_datetime(\"2025-01-01\")]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 60,
    "id": "b4b54431",
    "metadata": {},
    "outputs": [],
    "source": [
-    "month_train = monthly_df.filter(TRAIN_FILTER)\n",
-    "month_val = monthly_df.filter(VALIDATION_FILTER)\n",
-    "month_test = monthly_df.filter(TEST_FILTER)"
+    "month_train = monthly_df[monthly_df[\"ds\"] < pd.to_datetime(\"2024-01-01\")]\n",
+    "month_val = monthly_df[(monthly_df[\"ds\"] >= pd.to_datetime(\"2024-01-01\")) & (monthly_df[\"ds\"] < pd.to_datetime(\"2025-01-01\"))]\n",
+    "month_test = monthly_df[monthly_df[\"ds\"] >= pd.to_datetime(\"2025-01-01\")]"
    ]
   },
   {
