added unique id

--- a/code/welt_project.ipynb
+++ b/code/welt_project.ipynb
@@ -2,18 +2,31 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 55,
+   "id": "ae100bfa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#%pip install statsforecast pandas polars pyarrow"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
    "id": "d3586272",
    "metadata": {},
    "outputs": [],
    "source": [
     "import polars as pl\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "\n",
+    "from statsforecast import StatsForecast\n",
+    "from statsforecast.models import SeasonalNaive, HistoricAverage, RandomWalkWithDrift"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 57,
    "id": "6a4ead67",
    "metadata": {},
    "outputs": [],
@@ -32,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 58,
    "id": "ae1e8c0f",
    "metadata": {},
    "outputs": [
@@ -69,7 +82,7 @@
        "└─────────┴───────────┴────────────┴──────────────────┘"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -81,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 59,
    "id": "998ccd91",
    "metadata": {},
    "outputs": [
@@ -108,7 +121,7 @@
        "└─────────┴───────────┴──────┴──────────────────┘"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 60,
    "id": "f0771c89",
    "metadata": {},
    "outputs": [
@@ -141,36 +154,37 @@
        "  white-space: pre-wrap;\n",
        "}\n",
        "</style>\n",
-       "<small>shape: (4_009, 2)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>ds</th><th>y</th></tr><tr><td>date</td><td>f64</td></tr></thead><tbody><tr><td>2015-01-01</td><td>22.34</td></tr><tr><td>2015-01-02</td><td>22.34</td></tr><tr><td>2015-01-03</td><td>22.34</td></tr><tr><td>2015-01-04</td><td>22.34</td></tr><tr><td>2015-01-05</td><td>36.18</td></tr><tr><td>&hellip;</td><td>&hellip;</td></tr><tr><td>2025-12-18</td><td>135.16</td></tr><tr><td>2025-12-19</td><td>126.37</td></tr><tr><td>2025-12-20</td><td>111.08</td></tr><tr><td>2025-12-21</td><td>106.41</td></tr><tr><td>2025-12-22</td><td>103.23</td></tr></tbody></table></div>"
+       "<small>shape: (4_009, 3)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>unique_id</th><th>ds</th><th>y</th></tr><tr><td>str</td><td>date</td><td>f64</td></tr></thead><tbody><tr><td>&quot;Austria&quot;</td><td>2015-01-01</td><td>22.34</td></tr><tr><td>&quot;Austria&quot;</td><td>2015-01-02</td><td>22.34</td></tr><tr><td>&quot;Austria&quot;</td><td>2015-01-03</td><td>22.34</td></tr><tr><td>&quot;Austria&quot;</td><td>2015-01-04</td><td>22.34</td></tr><tr><td>&quot;Austria&quot;</td><td>2015-01-05</td><td>36.18</td></tr><tr><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td></tr><tr><td>&quot;Austria&quot;</td><td>2025-12-18</td><td>135.16</td></tr><tr><td>&quot;Austria&quot;</td><td>2025-12-19</td><td>126.37</td></tr><tr><td>&quot;Austria&quot;</td><td>2025-12-20</td><td>111.08</td></tr><tr><td>&quot;Austria&quot;</td><td>2025-12-21</td><td>106.41</td></tr><tr><td>&quot;Austria&quot;</td><td>2025-12-22</td><td>103.23</td></tr></tbody></table></div>"
       ],
       "text/plain": [
-       "shape: (4_009, 2)\n",
-       "┌────────────┬────────┐\n",
-       "│ ds         ┆ y      │\n",
-       "│ ---        ┆ ---    │\n",
-       "│ date       ┆ f64    │\n",
-       "╞════════════╪════════╡\n",
-       "│ 2015-01-01 ┆ 22.34  │\n",
-       "│ 2015-01-02 ┆ 22.34  │\n",
-       "│ 2015-01-03 ┆ 22.34  │\n",
-       "│ 2015-01-04 ┆ 22.34  │\n",
-       "│ 2015-01-05 ┆ 36.18  │\n",
-       "│ …          ┆ …      │\n",
-       "│ 2025-12-18 ┆ 135.16 │\n",
-       "│ 2025-12-19 ┆ 126.37 │\n",
-       "│ 2025-12-20 ┆ 111.08 │\n",
-       "│ 2025-12-21 ┆ 106.41 │\n",
-       "│ 2025-12-22 ┆ 103.23 │\n",
-       "└────────────┴────────┘"
+       "shape: (4_009, 3)\n",
+       "┌───────────┬────────────┬────────┐\n",
+       "│ unique_id ┆ ds         ┆ y      │\n",
+       "│ ---       ┆ ---        ┆ ---    │\n",
+       "│ str       ┆ date       ┆ f64    │\n",
+       "╞═══════════╪════════════╪════════╡\n",
+       "│ Austria   ┆ 2015-01-01 ┆ 22.34  │\n",
+       "│ Austria   ┆ 2015-01-02 ┆ 22.34  │\n",
+       "│ Austria   ┆ 2015-01-03 ┆ 22.34  │\n",
+       "│ Austria   ┆ 2015-01-04 ┆ 22.34  │\n",
+       "│ Austria   ┆ 2015-01-05 ┆ 36.18  │\n",
+       "│ …         ┆ …          ┆ …      │\n",
+       "│ Austria   ┆ 2025-12-18 ┆ 135.16 │\n",
+       "│ Austria   ┆ 2025-12-19 ┆ 126.37 │\n",
+       "│ Austria   ┆ 2025-12-20 ┆ 111.08 │\n",
+       "│ Austria   ┆ 2025-12-21 ┆ 106.41 │\n",
+       "│ Austria   ┆ 2025-12-22 ┆ 103.23 │\n",
+       "└───────────┴────────────┴────────┘"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "daily_df = electricity_df.select([\n",
+    "    pl.col(\"Country\").alias(\"unique_id\"),\n",
     "    pl.col(\"Date\").alias(\"ds\"),\n",
     "    pl.col(\"Price (EUR/MWhe)\").alias(\"y\")\n",
     "]).sort(\"ds\")\n",
@@ -187,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 61,
    "id": "23ba2024",
    "metadata": {},
    "outputs": [
@@ -224,7 +238,7 @@
        "└─────────┴───────────┴────────────┴──────────────────┴─────────────┘"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,17 +250,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 62,
    "id": "d8f379fa",
    "metadata": {},
    "outputs": [],
    "source": [
-    "monthly_df = monthly_df.group_by(\"month_first\").agg(pl.col(\"Price (EUR/MWhe)\").mean().alias(\"mean_price\")).sort(\"month_first\")"
+    "monthly_df = monthly_df.group_by([\"Country\", \"month_first\"]).agg(pl.col(\"Price (EUR/MWhe)\").mean().alias(\"mean_price\")).sort(\"month_first\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 63,
    "id": "36cbc84b",
    "metadata": {},
    "outputs": [
@@ -260,36 +274,37 @@
        "  white-space: pre-wrap;\n",
        "}\n",
        "</style>\n",
-       "<small>shape: (132, 2)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>ds</th><th>y</th></tr><tr><td>date</td><td>f64</td></tr></thead><tbody><tr><td>2015-01-01</td><td>29.935161</td></tr><tr><td>2015-02-01</td><td>36.695</td></tr><tr><td>2015-03-01</td><td>31.297419</td></tr><tr><td>2015-04-01</td><td>29.778333</td></tr><tr><td>2015-05-01</td><td>25.329677</td></tr><tr><td>&hellip;</td><td>&hellip;</td></tr><tr><td>2025-08-01</td><td>74.744194</td></tr><tr><td>2025-09-01</td><td>92.587667</td></tr><tr><td>2025-10-01</td><td>108.226452</td></tr><tr><td>2025-11-01</td><td>116.564</td></tr><tr><td>2025-12-01</td><td>120.928182</td></tr></tbody></table></div>"
+       "<small>shape: (132, 3)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>unique_id</th><th>ds</th><th>y</th></tr><tr><td>str</td><td>date</td><td>f64</td></tr></thead><tbody><tr><td>&quot;Austria&quot;</td><td>2015-01-01</td><td>29.935161</td></tr><tr><td>&quot;Austria&quot;</td><td>2015-02-01</td><td>36.695</td></tr><tr><td>&quot;Austria&quot;</td><td>2015-03-01</td><td>31.297419</td></tr><tr><td>&quot;Austria&quot;</td><td>2015-04-01</td><td>29.778333</td></tr><tr><td>&quot;Austria&quot;</td><td>2015-05-01</td><td>25.329677</td></tr><tr><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td></tr><tr><td>&quot;Austria&quot;</td><td>2025-08-01</td><td>74.744194</td></tr><tr><td>&quot;Austria&quot;</td><td>2025-09-01</td><td>92.587667</td></tr><tr><td>&quot;Austria&quot;</td><td>2025-10-01</td><td>108.226452</td></tr><tr><td>&quot;Austria&quot;</td><td>2025-11-01</td><td>116.564</td></tr><tr><td>&quot;Austria&quot;</td><td>2025-12-01</td><td>120.928182</td></tr></tbody></table></div>"
       ],
       "text/plain": [
-       "shape: (132, 2)\n",
-       "┌────────────┬────────────┐\n",
-       "│ ds         ┆ y          │\n",
-       "│ ---        ┆ ---        │\n",
-       "│ date       ┆ f64        │\n",
-       "╞════════════╪════════════╡\n",
-       "│ 2015-01-01 ┆ 29.935161  │\n",
-       "│ 2015-02-01 ┆ 36.695     │\n",
-       "│ 2015-03-01 ┆ 31.297419  │\n",
-       "│ 2015-04-01 ┆ 29.778333  │\n",
-       "│ 2015-05-01 ┆ 25.329677  │\n",
-       "│ …          ┆ …          │\n",
-       "│ 2025-08-01 ┆ 74.744194  │\n",
-       "│ 2025-09-01 ┆ 92.587667  │\n",
-       "│ 2025-10-01 ┆ 108.226452 │\n",
-       "│ 2025-11-01 ┆ 116.564    │\n",
-       "│ 2025-12-01 ┆ 120.928182 │\n",
-       "└────────────┴────────────┘"
+       "shape: (132, 3)\n",
+       "┌───────────┬────────────┬────────────┐\n",
+       "│ unique_id ┆ ds         ┆ y          │\n",
+       "│ ---       ┆ ---        ┆ ---        │\n",
+       "│ str       ┆ date       ┆ f64        │\n",
+       "╞═══════════╪════════════╪════════════╡\n",
+       "│ Austria   ┆ 2015-01-01 ┆ 29.935161  │\n",
+       "│ Austria   ┆ 2015-02-01 ┆ 36.695     │\n",
+       "│ Austria   ┆ 2015-03-01 ┆ 31.297419  │\n",
+       "│ Austria   ┆ 2015-04-01 ┆ 29.778333  │\n",
+       "│ Austria   ┆ 2015-05-01 ┆ 25.329677  │\n",
+       "│ …         ┆ …          ┆ …          │\n",
+       "│ Austria   ┆ 2025-08-01 ┆ 74.744194  │\n",
+       "│ Austria   ┆ 2025-09-01 ┆ 92.587667  │\n",
+       "│ Austria   ┆ 2025-10-01 ┆ 108.226452 │\n",
+       "│ Austria   ┆ 2025-11-01 ┆ 116.564    │\n",
+       "│ Austria   ┆ 2025-12-01 ┆ 120.928182 │\n",
+       "└───────────┴────────────┴────────────┘"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "monthly_df = monthly_df.rename({\n",
+    "    \"Country\": \"unique_id\",\n",
     "    \"month_first\": \"ds\",\n",
     "    \"mean_price\":\"y\"\n",
     "})\n",
@@ -306,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 64,
    "id": "a052106a",
    "metadata": {},
    "outputs": [],
@@ -317,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 65,
    "id": "ab657096",
    "metadata": {},
    "outputs": [],
@@ -329,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 66,
    "id": "b4b54431",
    "metadata": {},
    "outputs": [],
@@ -340,12 +355,82 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4dff9bb4",
+   "metadata": {},
+   "source": [
+    "### Forecasts:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
+   "id": "3babcc83",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "HORIZON_DAILY = 365 # days\n",
+    "HORIZON_MONTHLY = 12 # months"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "d6dc6ad3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sf = StatsForecast(\n",
+    "    models=[\n",
+    "        SeasonalNaive(season_length=12),\n",
+    "        RandomWalkWithDrift(),\n",
+    "        HistoricAverage(),\n",
+    "    ],\n",
+    "    freq=\"MS\",\n",
+    "    n_jobs=1\n",
+    ")\n",
+    "\n",
+    "stat_monthly_val = sf.forecast(df=month_train, h=HORIZON_MONTHLY, )\n",
+    "stat_monthly_test = sf.forecast(df=pd.concat([month_train, month_val]), h=HORIZON_MONTHLY)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
    "id": "78c01f38",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def run_baseline_forecast(text: str, fold_data: dict, display: bool = False):\n",
+    "    train = fold_data[\"train\"]\n",
+    "    validation = fold_data[\"validate\"]\n",
+    "    test = fold_data[\"test\"]\n",
+    "\n",
+    "    \n",
+    "\n",
+    "    \n",
+    "\n",
+    "    # Structural Model (average of Seasonal Naive + RWD)\n",
+    "    for fc in [fc_val, fc_test]:\n",
+    "        fc[\"Structural\"] = (fc[\"SeasonalNaive\"] + fc[\"RWD\"]) / 2\n",
+    "\n",
+    "    validation_evaluation = fc_val.merge(validation[[\"unique_id\",\"ds\",\"y\"]], on=[\"unique_id\",\"ds\"], how=\"left\")\n",
+    "    test_evaluation = fc_test.merge(test[[\"unique_id\", \"ds\", \"y\"]], on=[\"unique_id\", \"ds\"], how=\"left\")\n",
+    "    \n",
+    "    if display:     \n",
+    "        print(text) \n",
+    "        print(\"Validation Forecasts:\")\n",
+    "        display(validation_evaluation)\n",
+    "        print(\"Test Forecasts:\")\n",
+    "        display(test_evaluation)\n",
+    "        \n",
+    "    return { \n",
+    "        \"validation\": validation_evaluation.fillna(0), \n",
+    "        \"test\": test_evaluation.fillna(0),\n",
+    "        \"validation_additional\": None,\n",
+    "        \"test_additional\": None\n",
+    "    }"
+   ]
   },
   {
    "cell_type": "code",
@@ -358,7 +443,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "time_series",
    "language": "python",
    "name": "python3"
   },
@@ -372,7 +457,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.9"
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
