--- a/code/welt_project.ipynb
+++ b/code/welt_project.ipynb
@@ -344,14 +344,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "id": "b4b54431",
    "metadata": {},
    "outputs": [],
    "source": [
-    "month_train = monthly_df[monthly_df[\"ds\"] < pd.to_datetime(\"2024-01-01\")]\n",
-    "month_val = monthly_df[(monthly_df[\"ds\"] >= pd.to_datetime(\"2024-01-01\")) & (monthly_df[\"ds\"] < pd.to_datetime(\"2025-01-01\"))]\n",
-    "month_test = monthly_df[monthly_df[\"ds\"] >= pd.to_datetime(\"2025-01-01\")]"
+    "monthly_train = monthly_df[monthly_df[\"ds\"] < pd.to_datetime(\"2024-01-01\")]\n",
+    "monthly_val = monthly_df[(monthly_df[\"ds\"] >= pd.to_datetime(\"2024-01-01\")) & (monthly_df[\"ds\"] < pd.to_datetime(\"2025-01-01\"))]\n",
+    "monthly_test = monthly_df[monthly_df[\"ds\"] >= pd.to_datetime(\"2025-01-01\")]"
    ]
   },
   {
@@ -375,14 +375,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
-   "id": "d6dc6ad3",
+   "execution_count": null,
+   "id": "becc290d",
    "metadata": {},
    "outputs": [],
    "source": [
     "sf = StatsForecast(\n",
     "    models=[\n",
-    "        SeasonalNaive(season_length=12),\n",
+    "        SeasonalNaive(season_length=HORIZON_DAILY),\n",
     "        RandomWalkWithDrift(),\n",
     "        HistoricAverage(),\n",
     "    ],\n",
@@ -390,46 +390,41 @@
     "    n_jobs=1\n",
     ")\n",
     "\n",
-    "stat_monthly_val = sf.forecast(df=month_train, h=HORIZON_MONTHLY, )\n",
-    "stat_monthly_test = sf.forecast(df=pd.concat([month_train, month_val]), h=HORIZON_MONTHLY)"
+    "stat_daily_val = sf.forecast(df=daily_train, h=HORIZON_DAILY, )\n",
+    "stat_daily_test = sf.forecast(df=pd.concat([daily_train, daily_val]), h=HORIZON_DAILY)\n",
+    "\n",
+    "for forecast in [stat_daily_val, stat_daily_test]:\n",
+    "    forecast[\"Structural\"] = (forecast[\"SeasonalNaive\"] + forecast[\"RWD\"]) / 2\n",
+    "\n",
+    "stat_daily_val = stat_daily_val.merge(daily_val, on=[\"unique_id\", \"ds\"])\n",
+    "stat_daily_test = stat_daily_test.merge(daily_test, on=[\"unique_id\", \"ds\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
-   "id": "78c01f38",
+   "execution_count": null,
+   "id": "d6dc6ad3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def run_baseline_forecast(text: str, fold_data: dict, display: bool = False):\n",
-    "    train = fold_data[\"train\"]\n",
-    "    validation = fold_data[\"validate\"]\n",
-    "    test = fold_data[\"test\"]\n",
+    "sf = StatsForecast(\n",
+    "    models=[\n",
+    "        SeasonalNaive(season_length=HORIZON_MONTHLY),\n",
+    "        RandomWalkWithDrift(),\n",
+    "        HistoricAverage(),\n",
+    "    ],\n",
+    "    freq=\"MS\",\n",
+    "    n_jobs=1\n",
+    ")\n",
     "\n",
-    "    \n",
+    "stat_monthly_val = sf.forecast(df=monthly_train, h=HORIZON_MONTHLY, )\n",
+    "stat_monthly_test = sf.forecast(df=pd.concat([monthly_train, monthly_val]), h=HORIZON_MONTHLY)\n",
     "\n",
-    "    \n",
+    "for forecast in [stat_monthly_val, stat_monthly_test]:\n",
+    "    forecast[\"Structural\"] = (forecast[\"SeasonalNaive\"] + forecast[\"RWD\"]) / 2\n",
     "\n",
-    "    # Structural Model (average of Seasonal Naive + RWD)\n",
-    "    for fc in [fc_val, fc_test]:\n",
-    "        fc[\"Structural\"] = (fc[\"SeasonalNaive\"] + fc[\"RWD\"]) / 2\n",
-    "\n",
-    "    validation_evaluation = fc_val.merge(validation[[\"unique_id\",\"ds\",\"y\"]], on=[\"unique_id\",\"ds\"], how=\"left\")\n",
-    "    test_evaluation = fc_test.merge(test[[\"unique_id\", \"ds\", \"y\"]], on=[\"unique_id\", \"ds\"], how=\"left\")\n",
-    "    \n",
-    "    if display:     \n",
-    "        print(text) \n",
-    "        print(\"Validation Forecasts:\")\n",
-    "        display(validation_evaluation)\n",
-    "        print(\"Test Forecasts:\")\n",
-    "        display(test_evaluation)\n",
-    "        \n",
-    "    return { \n",
-    "        \"validation\": validation_evaluation.fillna(0), \n",
-    "        \"test\": test_evaluation.fillna(0),\n",
-    "        \"validation_additional\": None,\n",
-    "        \"test_additional\": None\n",
-    "    }"
+    "stat_monthly_val = stat_monthly_val.merge(monthly_val, on=[\"unique_id\", \"ds\"])\n",
+    "stat_monthly_test = stat_monthly_test.merge(monthly_test, on=[\"unique_id\", \"ds\"])"
    ]
   },
   {
