updated util usage

--- a/code/welt_project.ipynb
+++ b/code/welt_project.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "e67dd9e6",
    "metadata": {},
    "outputs": [],
@@ -22,10 +22,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "d3586272",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\jonas\\anaconda3\\envs\\time_series\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import polars as pl\n",
     "import pandas as pd\n",
@@ -37,27 +46,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "038986b3",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'RESULTS_DIR' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m daily_train, daily_val, daily_test = \u001b[43mload_daily_data\u001b[49m\u001b[43m(\u001b[49m\u001b[43muse_existing\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[32m      2\u001b[39m monthly_train, monthly_val, monthly_test = load_monthly_data(use_existing=\u001b[38;5;28;01mFalse\u001b[39;00m)\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\jonas\\source\\school\\capstone\\code\\utils\\preprocessing.py:52\u001b[39m, in \u001b[36mload_daily_data\u001b[39m\u001b[34m(use_existing)\u001b[39m\n\u001b[32m     49\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m _read_existing_data(\u001b[33m\"\u001b[39m\u001b[33mdaily\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     51\u001b[39m train_df, val_df, test_df = _split_data(_read_original_data().to_pandas())\n\u001b[32m---> \u001b[39m\u001b[32m52\u001b[39m \u001b[43m_write_existing_data\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mdaily\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtrain_df\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mval_df\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtest_df\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     53\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m train_df, val_df, test_df\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\jonas\\source\\school\\capstone\\code\\utils\\preprocessing.py:30\u001b[39m, in \u001b[36m_write_existing_data\u001b[39m\u001b[34m(prefix, train, val, test)\u001b[39m\n\u001b[32m     28\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34m_write_existing_data\u001b[39m(prefix: \u001b[38;5;28mstr\u001b[39m, train: pd.DataFrame, val: pd.DataFrame, test: pd.DataFrame) -> \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m     29\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\"Write preprocessed data to CSV files.\"\"\"\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m30\u001b[39m     train.to_csv(os.path.join(\u001b[43mRESULTS_DIR\u001b[49m, \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mprefix\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m_train.csv\u001b[39m\u001b[33m\"\u001b[39m), index=\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[32m     31\u001b[39m     val.to_csv(os.path.join(RESULTS_DIR, \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mprefix\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m_val.csv\u001b[39m\u001b[33m\"\u001b[39m), index=\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[32m     32\u001b[39m     test.to_csv(os.path.join(RESULTS_DIR, \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mprefix\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m_test.csv\u001b[39m\u001b[33m\"\u001b[39m), index=\u001b[38;5;28;01mFalse\u001b[39;00m)\n",
-      "\u001b[31mNameError\u001b[39m: name 'RESULTS_DIR' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "daily_train, daily_val, daily_test = load_daily_data(use_existing=False)\n",
-    "monthly_train, monthly_val, monthly_test = load_monthly_data(use_existing=False)"
+    "daily_train, daily_val, daily_test = load_daily_data(use_existing=True)\n",
+    "monthly_train, monthly_val, monthly_test = load_monthly_data(use_existing=True)"
    ]
   },
   {
