added baseline utils

--- a/code/welt_project.ipynb
+++ b/code/welt_project.ipynb
@@ -12,12 +12,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "e67dd9e6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from utils.preprocessing import load_daily_data, load_monthly_data"
+    "from utils.preprocessing import load_daily_data, load_monthly_data\n",
+    "from utils.baseline import run_baseline_forecast_daily, run_statistical_forecast_monthly"
    ]
   },
   {
@@ -87,65 +88,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "becc290d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sf_daily = StatsForecast(\n",
-    "    models=[\n",
-    "        SeasonalNaive(season_length=HORIZON_DAILY),\n",
-    "        RandomWalkWithDrift(),\n",
-    "        HistoricAverage(),\n",
-    "    ],\n",
-    "    freq=FREQ_DAILY,\n",
-    "    n_jobs=1\n",
-    ")\n",
-    "\n",
-    "base_daily_val = sf_daily.forecast(df=daily_train, h=HORIZON_DAILY)\n",
-    "base_daily_test = sf_daily.forecast(df=pd.concat([daily_train, daily_val]), h=HORIZON_DAILY)\n",
-    "\n",
-    "for forecast in [base_daily_val, base_daily_test]:\n",
-    "    forecast[\"Structural\"] = (forecast[\"SeasonalNaive\"] + forecast[\"RWD\"]) / 2\n",
-    "\n",
-    "base_daily_val = base_daily_val.merge(daily_val, on=[\"unique_id\", \"ds\"], how=\"left\")\n",
-    "\n",
-    "base_daily_val.to_csv(\"../results/forecasts/base_daily_val.csv\")\n",
-    "base_daily_test.to_csv(\"../results/forecasts/base_daily_test.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "d6dc6ad3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "sf_monthly = StatsForecast(\n",
-    "    models=[\n",
-    "        SeasonalNaive(season_length=HORIZON_MONTHLY),\n",
-    "        RandomWalkWithDrift(),\n",
-    "        HistoricAverage(),\n",
-    "    ],\n",
-    "    freq=FREQ_MONTHLY,\n",
-    "    n_jobs=1\n",
-    ")\n",
-    "\n",
-    "base_monthly_val = sf_monthly.forecast(df=monthly_train, h=HORIZON_MONTHLY)\n",
-    "base_monthly_test = sf_monthly.forecast(df=pd.concat([monthly_train, monthly_val]), h=HORIZON_MONTHLY)\n",
-    "\n",
-    "for forecast in [base_monthly_val, base_monthly_test]:\n",
-    "    forecast[\"Structural\"] = (forecast[\"SeasonalNaive\"] + forecast[\"RWD\"]) / 2\n",
-    "\n",
-    "base_monthly_val = base_monthly_val.merge(monthly_val, on=[\"unique_id\", \"ds\"], how=\"left\")\n",
-    "\n",
-    "base_monthly_val.to_csv(\"../results/forecasts/base_monthly_val.csv\")\n",
-    "base_monthly_test.to_csv(\"../results/forecasts/base_monthly_test.csv\")"
+    "base_daily_val, base_daily_test = run_baseline_forecast_daily(daily_train, daily_val, daily_test, use_existing=True)\n",
+    "base_monthly_val, base_montly_test = run_statistical_forecast_monthly(monthly_train, monthly_val, monthly_test, use_existing=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "f4eae8a8",
    "metadata": {},
    "outputs": [
@@ -165,8 +119,8 @@
         },
         {
          "name": "ds",
-         "rawType": "datetime64[ms]",
-         "type": "unknown"
+         "rawType": "datetime64[ns]",
+         "type": "datetime"
         },
         {
          "name": "SeasonalNaive",
@@ -194,7 +148,7 @@
          "type": "float"
         }
        ],
-       "ref": "03c7f8d7-7a89-460c-8d24-557e8cf4b2fd",
+       "ref": "466f5672-576a-4813-b82f-2420c7b7ac1a",
        "rows": [
         [
          "0",
@@ -230,7 +184,7 @@
          "3",
          "Austria",
          "2025-04-01 00:00:00",
-         "58.864999999999995",
+         "58.865",
          "131.1502575223638",
          "76.2862430579833",
          "95.0076287611819",
@@ -284,7 +238,7 @@
          "135.26469232854436",
          "76.2862430579833",
          "108.83267949760551",
-         "92.58766666666669"
+         "92.58766666666668"
         ],
         [
          "9",
@@ -304,7 +258,7 @@
          "136.91046625101657",
          "76.2862430579833",
          "133.5580664588416",
-         "116.56400000000001"
+         "116.564"
         ],
         [
          "11",
@@ -505,7 +459,7 @@
        "11  132.796031  120.928182  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
