fixed importing, added forecasting utils, added statistical forecast

--- a/code/welt_project.ipynb
+++ b/code/welt_project.ipynb
@@ -19,27 +19,8 @@
    "source": [
     "import pandas as pd\n",
     "from utils.preprocessing import load_daily_data, load_monthly_data\n",
-    "from utils.baseline import run_baseline_forecast_daily, run_statistical_forecast_monthly"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d3586272",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\jonas\\anaconda3\\envs\\time_series\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
-   "source": [
-    "from statsforecast import StatsForecast\n",
-    "from statsforecast.models import SimpleExponentialSmoothing, Holt, HoltWinters, AutoRegressive, AutoARIMA"
+    "from utils.baseline import run_baseline_forecast_daily, run_baseline_forecast_monthly\n",
+    "from utils.statistical import run_statistical_forecast_daily, run_statistical_forecast_monthly"
    ]
   },
   {
@@ -71,18 +52,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "d6dc6ad3",
    "metadata": {},
    "outputs": [],
    "source": [
     "base_daily_val, base_daily_test = run_baseline_forecast_daily(daily_train, daily_val, daily_test, use_existing=True)\n",
-    "base_monthly_val, base_montly_test = run_statistical_forecast_monthly(monthly_train, monthly_val, monthly_test, use_existing=True)"
+    "base_monthly_val, base_monthly_test = run_baseline_forecast_monthly(monthly_train, monthly_val, monthly_test, use_existing=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "badfbec1",
+   "metadata": {},
+   "source": [
+    "##### Statistical Forecast:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "f4eae8a8",
    "metadata": {},
    "outputs": [
@@ -448,60 +437,8 @@
     }
    ],
    "source": [
-    "base_monthly_val"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "badfbec1",
-   "metadata": {},
-   "source": [
-    "##### Statistical Forecast:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "5c333145",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mCannot execute code, session has been disposed. Please try restarting the Kernel."
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mCannot execute code, session has been disposed. Please try restarting the Kernel. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    }
-   ],
-   "source": [
-    "sf_daily = StatsForecast(\n",
-    "    models=[\n",
-    "        SimpleExponentialSmoothing(alpha=0.5),\n",
-    "        Holt(season_length=HORIZON_DAILY, error_type=\"A\"),\n",
-    "        HoltWinters(season_length=HORIZON_DAILY, error_type=\"A\"),\n",
-    "        AutoRegressive(lags=HORIZON_DAILY)\n",
-    "    ],\n",
-    "    freq=FREQ_DAILY,\n",
-    "    n_jobs=1\n",
-    ")\n",
-    "\n",
-    "stat_daily_val = sf_daily.forecast(df=daily_train, h=HORIZON_DAILY)\n",
-    "stat_daily_test = sf_daily.forecast(df=pd.concat([daily_train, daily_val]), h=HORIZON_DAILY)\n",
-    "\n",
-    "stat_daily_val = stat_daily_val.merge(daily_val, on=[\"unique_id\", \"ds\"], how=\"left\")\n",
-    "\n",
-    "stat_daily_val.to_csv(\"../results/forecasts/stat_daily_val.csv\")\n",
-    "stat_daily_test.to_csv(\"../results/forecasts/stat_daily_test.csv\")"
+    "statis_daily_val, statis_daily_test = run_statistical_forecast_daily(daily_train, daily_val, daily_test, use_existing=True)\n",
+    "statis_monthly_val, statis_monthly_test = run_statistical_forecast_monthly(monthly_train, monthly_val, monthly_test, use_existing=True)"
    ]
   },
   {
@@ -510,26 +447,7 @@
    "id": "f83dee1e",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "sf_monthly = StatsForecast(\n",
-    "    models=[\n",
-    "        SimpleExponentialSmoothing(alpha=0.5),\n",
-    "        Holt(season_length=HORIZON_MONTHLY, error_type=\"A\"),\n",
-    "        HoltWinters(season_length=HORIZON_MONTHLY, error_type=\"A\"),\n",
-    "        AutoRegressive(lags=HORIZON_MONTHLY)\n",
-    "    ],\n",
-    "    freq=FREQ_MONTHLY,\n",
-    "    n_jobs=1\n",
-    ")\n",
-    "\n",
-    "stat_monthly_val = sf_monthly.forecast(df=monthly_train, h=HORIZON_MONTHLY)\n",
-    "stat_monthly_test = sf_monthly.forecast(df=pd.concat([monthly_train, monthly_val]), h=HORIZON_MONTHLY)\n",
-    "\n",
-    "stat_monthly_val = stat_monthly_val.merge(monthly_val, on=[\"unique_id\", \"ds\"], how=\"left\")\n",
-    "\n",
-    "stat_monthly_val.to_csv(\"../results/forecasts/stat_monthly_val.csv\")\n",
-    "stat_monthly_test.to_csv(\"../results/forecasts/stat_monthly_test.csv\")"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
