--- a/code/capstone.ipynb
+++ b/code/capstone.ipynb
@@ -24,6 +24,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "48a7159c",
+   "metadata": {},
+   "source": [
+    "### Loading Data:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "id": "038986b3",
@@ -74,388 +82,11 @@
    "execution_count": null,
    "id": "f4eae8a8",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
-       "columns": [
-        {
-         "name": "index",
-         "rawType": "int64",
-         "type": "integer"
-        },
-        {
-         "name": "unique_id",
-         "rawType": "object",
-         "type": "string"
-        },
-        {
-         "name": "ds",
-         "rawType": "datetime64[ns]",
-         "type": "datetime"
-        },
-        {
-         "name": "SeasonalNaive",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "RWD",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "HistoricAverage",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "Structural",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "y",
-         "rawType": "float64",
-         "type": "float"
-        }
-       ],
-       "ref": "466f5672-576a-4813-b82f-2420c7b7ac1a",
-       "rows": [
-        [
-         "0",
-         "Austria",
-         "2025-01-01 00:00:00",
-         "80.59709677419355",
-         "128.6815966386555",
-         "76.2862430579833",
-         "104.63934670642452",
-         "134.1787096774194"
-        ],
-        [
-         "1",
-         "Austria",
-         "2025-02-01 00:00:00",
-         "65.4144827586207",
-         "129.50448359989159",
-         "76.2862430579833",
-         "97.45948317925614",
-         "140.7710714285714"
-        ],
-        [
-         "2",
-         "Austria",
-         "2025-03-01 00:00:00",
-         "62.85870967741936",
-         "130.3273705611277",
-         "76.2862430579833",
-         "96.59304011927354",
-         "103.6041935483871"
-        ],
-        [
-         "3",
-         "Austria",
-         "2025-04-01 00:00:00",
-         "58.865",
-         "131.1502575223638",
-         "76.2862430579833",
-         "95.0076287611819",
-         "81.32366666666668"
-        ],
-        [
-         "4",
-         "Austria",
-         "2025-05-01 00:00:00",
-         "64.17064516129031",
-         "131.97314448359992",
-         "76.2862430579833",
-         "98.07189482244512",
-         "71.01677419354837"
-        ],
-        [
-         "5",
-         "Austria",
-         "2025-06-01 00:00:00",
-         "68.32",
-         "132.79603144483602",
-         "76.2862430579833",
-         "100.558015722418",
-         "66.67266666666667"
-        ],
-        [
-         "6",
-         "Austria",
-         "2025-07-01 00:00:00",
-         "63.65935483870967",
-         "133.61891840607214",
-         "76.2862430579833",
-         "98.63913662239091",
-         "87.98"
-        ],
-        [
-         "7",
-         "Austria",
-         "2025-08-01 00:00:00",
-         "84.47709677419356",
-         "134.44180536730823",
-         "76.2862430579833",
-         "109.4594510707509",
-         "74.74419354838707"
-        ],
-        [
-         "8",
-         "Austria",
-         "2025-09-01 00:00:00",
-         "82.40066666666667",
-         "135.26469232854436",
-         "76.2862430579833",
-         "108.83267949760551",
-         "92.58766666666668"
-        ],
-        [
-         "9",
-         "Austria",
-         "2025-10-01 00:00:00",
-         "85.35354838709675",
-         "136.08757928978045",
-         "76.2862430579833",
-         "110.72056383843861",
-         "108.22645161290323"
-        ],
-        [
-         "10",
-         "Austria",
-         "2025-11-01 00:00:00",
-         "130.20566666666664",
-         "136.91046625101657",
-         "76.2862430579833",
-         "133.5580664588416",
-         "116.564"
-        ],
-        [
-         "11",
-         "Austria",
-         "2025-12-01 00:00:00",
-         "127.85870967741938",
-         "137.73335321225267",
-         "76.2862430579833",
-         "132.79603144483602",
-         "120.9281818181818"
-        ]
-       ],
-       "shape": {
-        "columns": 7,
-        "rows": 12
-       }
-      },
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>unique_id</th>\n",
-       "      <th>ds</th>\n",
-       "      <th>SeasonalNaive</th>\n",
-       "      <th>RWD</th>\n",
-       "      <th>HistoricAverage</th>\n",
-       "      <th>Structural</th>\n",
-       "      <th>y</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Austria</td>\n",
-       "      <td>2025-01-01</td>\n",
-       "      <td>80.597097</td>\n",
-       "      <td>128.681597</td>\n",
-       "      <td>76.286243</td>\n",
-       "      <td>104.639347</td>\n",
-       "      <td>134.178710</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Austria</td>\n",
-       "      <td>2025-02-01</td>\n",
-       "      <td>65.414483</td>\n",
-       "      <td>129.504484</td>\n",
-       "      <td>76.286243</td>\n",
-       "      <td>97.459483</td>\n",
-       "      <td>140.771071</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Austria</td>\n",
-       "      <td>2025-03-01</td>\n",
-       "      <td>62.858710</td>\n",
-       "      <td>130.327371</td>\n",
-       "      <td>76.286243</td>\n",
-       "      <td>96.593040</td>\n",
-       "      <td>103.604194</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Austria</td>\n",
-       "      <td>2025-04-01</td>\n",
-       "      <td>58.865000</td>\n",
-       "      <td>131.150258</td>\n",
-       "      <td>76.286243</td>\n",
-       "      <td>95.007629</td>\n",
-       "      <td>81.323667</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Austria</td>\n",
-       "      <td>2025-05-01</td>\n",
-       "      <td>64.170645</td>\n",
-       "      <td>131.973144</td>\n",
-       "      <td>76.286243</td>\n",
-       "      <td>98.071895</td>\n",
-       "      <td>71.016774</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Austria</td>\n",
-       "      <td>2025-06-01</td>\n",
-       "      <td>68.320000</td>\n",
-       "      <td>132.796031</td>\n",
-       "      <td>76.286243</td>\n",
-       "      <td>100.558016</td>\n",
-       "      <td>66.672667</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Austria</td>\n",
-       "      <td>2025-07-01</td>\n",
-       "      <td>63.659355</td>\n",
-       "      <td>133.618918</td>\n",
-       "      <td>76.286243</td>\n",
-       "      <td>98.639137</td>\n",
-       "      <td>87.980000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Austria</td>\n",
-       "      <td>2025-08-01</td>\n",
-       "      <td>84.477097</td>\n",
-       "      <td>134.441805</td>\n",
-       "      <td>76.286243</td>\n",
-       "      <td>109.459451</td>\n",
-       "      <td>74.744194</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>Austria</td>\n",
-       "      <td>2025-09-01</td>\n",
-       "      <td>82.400667</td>\n",
-       "      <td>135.264692</td>\n",
-       "      <td>76.286243</td>\n",
-       "      <td>108.832679</td>\n",
-       "      <td>92.587667</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>Austria</td>\n",
-       "      <td>2025-10-01</td>\n",
-       "      <td>85.353548</td>\n",
-       "      <td>136.087579</td>\n",
-       "      <td>76.286243</td>\n",
-       "      <td>110.720564</td>\n",
-       "      <td>108.226452</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>Austria</td>\n",
-       "      <td>2025-11-01</td>\n",
-       "      <td>130.205667</td>\n",
-       "      <td>136.910466</td>\n",
-       "      <td>76.286243</td>\n",
-       "      <td>133.558066</td>\n",
-       "      <td>116.564000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>Austria</td>\n",
-       "      <td>2025-12-01</td>\n",
-       "      <td>127.858710</td>\n",
-       "      <td>137.733353</td>\n",
-       "      <td>76.286243</td>\n",
-       "      <td>132.796031</td>\n",
-       "      <td>120.928182</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   unique_id         ds  SeasonalNaive         RWD  HistoricAverage  \\\n",
-       "0    Austria 2025-01-01      80.597097  128.681597        76.286243   \n",
-       "1    Austria 2025-02-01      65.414483  129.504484        76.286243   \n",
-       "2    Austria 2025-03-01      62.858710  130.327371        76.286243   \n",
-       "3    Austria 2025-04-01      58.865000  131.150258        76.286243   \n",
-       "4    Austria 2025-05-01      64.170645  131.973144        76.286243   \n",
-       "5    Austria 2025-06-01      68.320000  132.796031        76.286243   \n",
-       "6    Austria 2025-07-01      63.659355  133.618918        76.286243   \n",
-       "7    Austria 2025-08-01      84.477097  134.441805        76.286243   \n",
-       "8    Austria 2025-09-01      82.400667  135.264692        76.286243   \n",
-       "9    Austria 2025-10-01      85.353548  136.087579        76.286243   \n",
-       "10   Austria 2025-11-01     130.205667  136.910466        76.286243   \n",
-       "11   Austria 2025-12-01     127.858710  137.733353        76.286243   \n",
-       "\n",
-       "    Structural           y  \n",
-       "0   104.639347  134.178710  \n",
-       "1    97.459483  140.771071  \n",
-       "2    96.593040  103.604194  \n",
-       "3    95.007629   81.323667  \n",
-       "4    98.071895   71.016774  \n",
-       "5   100.558016   66.672667  \n",
-       "6    98.639137   87.980000  \n",
-       "7   109.459451   74.744194  \n",
-       "8   108.832679   92.587667  \n",
-       "9   110.720564  108.226452  \n",
-       "10  133.558066  116.564000  \n",
-       "11  132.796031  120.928182  "
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "statis_daily_val, statis_daily_test = run_statistical_forecast_daily(daily_train, daily_val, daily_test, use_existing=True)\n",
     "statis_monthly_val, statis_monthly_test = run_statistical_forecast_monthly(monthly_train, monthly_val, monthly_test, use_existing=True)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f83dee1e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ae127452",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
