ml forecast WIP

--- a/code/capstone.ipynb
+++ b/code/capstone.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "ae100bfa",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#%pip install statsforecast pandas polars pyarrow"
+    "# %pip install statsforecast mlforecast pandas polars pyarrow"
    ]
   },
   {
