--- a/code/modelselection.ipynb
+++ b/code/modelselection.ipynb
@@ -157,56 +157,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "38e0fa29",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# ## Machine Learning Models:\n",
-    "# from mlforecast import MLForecast\n",
-    "# from sklearn.linear_model import LinearRegression, HuberRegressor\n",
-    "# from sklearn.ensemble import RandomForestRegressor\n",
-    "# from lightgbm import LGBMRegressor\n",
-    "\n",
-    "\n",
-    "# models_ml = [\n",
-    "#     LinearRegression(),\n",
-    "#     HuberRegressor(epsilon=1.35, alpha=1e-3),\n",
-    "#     RandomForestRegressor(n_estimators=400, max_depth=20, min_samples_leaf=5, max_features='sqrt', random_state=42),\n",
-    "#     LGBMRegressor(num_leaves=63, learning_rate=0.05, n_estimators=500, min_child_samples=50, subsample=0.9, colsample_bytree=0.9, random_state=42),\n",
-    "# ]\n",
-    "\n",
-    "# ml_forecast = MLForecast(models=models_ml, freq=daily)  ##LAGS? ##DATE FEATURES? ##WINDOWS?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cecf448a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# ## ML with LAGS\n",
-    "# from mlforecast.lag_transforms import RollingMean, RollingStd\n",
-    "\n",
-    "\n",
-    "# ml_lags = [1, 7, 28]\n",
-    "# data_features = ['dayofweek', 'dayofmonth', 'month', 'quarter']\n",
-    "# lag_transforms = {\n",
-    "#     # Short-term volatility\n",
-    "#     1: [RollingStd(window_size=3)],\n",
-    "#     # Weekly trend\n",
-    "#     7: [RollingMean(window_size=3)],\n",
-    "#     # Monthly smoothing\n",
-    "#     28: [RollingMean(window_size=14)],\n",
-    "# }\n",
-    "# ml_forecast = MLForecast(models=models_ml, freq=daily, lags=ml_lags, date_features=data_features)\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "84f4e79e",
    "metadata": {},
@@ -437,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "id": "b82e0df5",
    "metadata": {},
    "outputs": [],
@@ -474,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "id": "b42211a5",
    "metadata": {},
    "outputs": [
@@ -996,6 +946,14 @@
     "\n",
     "df_val_ml_lags = fc_val.merge(daily_val[['unique_id','ds','y']], on=['unique_id','ds'], how='left')\n",
     "df_val_ml_lags"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f47c23ef",
+   "metadata": {},
+   "source": [
+    "## MONTHLY"
    ]
   },
   {
@@ -2211,6 +2169,14 @@
     "fc_val = ml_forecast.predict(h = 12, X_df=monthly_val)\n",
     "df_val_ml = fc_val.merge(monthly_val[['unique_id','ds','y']], on=['unique_id','ds'], how='left')\n",
     "df_val_ml"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "859bf4f8",
+   "metadata": {},
+   "source": [
+    "## MONTH WITH LAG"
    ]
   },
   {
@@ -3481,6 +3447,22 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "id": "c62b6498",
+   "metadata": {},
+   "source": [
+    "# DEEP LEARNING\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "913c6369",
+   "metadata": {},
+   "source": [
+    "## dl daily"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "74a9b673",
@@ -3520,6 +3502,54 @@
     "\n",
     "dl_forecast = NeuralForecast(models=models_dl, freq=daily) ##LAGS? ##Date Features??"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2cd4cbd5",
+   "metadata": {},
+   "source": [
+    "### daily with lag"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "62c97d6e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b1c6c071",
+   "metadata": {},
+   "source": [
+    "## monthly"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ae36a3fb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7a5b8c3c",
+   "metadata": {},
+   "source": [
+    "### monthly with lag"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fc43e890",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
